--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Unity WebGL Player | TennisVR_WebGL</title>
   </head>
   <body style="text-align: center">
-    <canvas id="unity-canvas" width=auto height=auto style="width: 100%; height: 100%; background: #231F20"></canvas>
+  <canvas id="unity-canvas"
+              style="width: 100%;
+                     height: 100%;
+                     background: #231F20">
+      </canvas>
     <script src="Build/Build.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
