--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
               style="width: 100%;
                      height: 100%;
                      background: url(./TemplateData/loading-image.png) no-repeat center center fixed;
-                     background-size: cover;
-                     display: block;
-                     position: absolute;">
+                     background-size: auto;
+                     display: auto;">
       </canvas>
 
       <div id="unity-loading-bar">
