--- a/index.html
+++ b/index.html
@@ -143,103 +143,103 @@
   </head>
 
   <body>
-      <a id="video" style="display: none;" data-fancybox href="https://vimeo.com/191947042?color=f00">
-          Vimeo video -
-          custom color
-      </a>
-      <script>
-          $('[data-fancybox]').fancybox({
-              youtube: {
-                  controls: 1,
-                  showinfo: 0
-              },
-              vimeo: {
-                  color: 'f00'
-              }
-          });
-      </script>
-
+  <a id="video" style="display: none;" data-fancybox href="https://vimeo.com/191947042?color=f00"> Vimeo video -
+    custom color </a>
+  <script>
+    $('[data-fancybox]').fancybox({
+      youtube: {
+        controls: 1,
+        showinfo: 0
+      },
+      vimeo: {
+        color: 'f00'
+      }
+    });
+  </script>
+  
       <canvas id="unity-canvas"
               style="width: 100%;
                      height: 100%;
                      background: url(./TemplateData/loading-image.png) no-repeat center center fixed;
-                     background-repeat:no-repeat;
-                     background-size:cover;
-                     background-position:center;">
+                     background-size: cover;
+                     display: block;
+                     position: absolute;">
       </canvas>
 
       <div id="unity-loading-bar">
-          <div id="unity-progress-bar-empty">
-              <div id="unity-progress-bar-full"></div>
-          </div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
       </div>
-      <div id="box"></div>
-      <div id="loadingBox">
-          <div id="bgBar"></div>
-          <div id="progressBar"></div>
-      </div>
+  <div id="box"></div>
+  <div id="loadingBox">
+    <div id="bgBar"></div>
+    <div id="progressBar"></div>
+  </div>
+  
+  <!-- <a target="_blank" href="http://www.kongregate.com"> <div id="icon"></div> </a> -->
+  <p id="loadingInfo"></p>
+  
+    <script>
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/Build.loader.js";
+      var config = {
+        dataUrl: buildUrl + "/Build.data.unityweb",
+        frameworkUrl: buildUrl + "/Build.framework.js.unityweb",
+        codeUrl: buildUrl + "/Build.wasm.unityweb",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "DefaultCompany",
+        productName: "TennisVR_WebGL",
+        productVersion: "0.1",
+      };
+      
+      var canvas = document.querySelector("#unity-canvas");
+      var loadingBar = document.querySelector("#unity-loading-bar");
+      var progressBarFull = document.querySelector("#unity-progress-bar-full");
 
-      <!-- <a target="_blank" href="http://www.kongregate.com"> <div id="icon"></div> </a> -->
-      <p id="loadingInfo"></p>
+      // By default Unity keeps WebGL canvas render target size matched with
+      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+      // Set this to false if you want to decouple this synchronization from
+      // happening inside the engine, and you would instead like to size up
+      // the canvas DOM size and WebGL render target sizes yourself.
+      // config.matchWebGLToCanvasSize = false;
 
-      <script>
-          var buildUrl = "Build";
-          var loaderUrl = buildUrl + "/Build.loader.js";
-          var config = {
-              dataUrl: buildUrl + "/Build.data.unityweb",
-              frameworkUrl: buildUrl + "/Build.framework.js.unityweb",
-              codeUrl: buildUrl + "/Build.wasm.unityweb",
-              streamingAssetsUrl: "StreamingAssets",
-              companyName: "DefaultCompany",
-              productName: "TennisVR_WebGL",
-              productVersion: "0.1",
-          };
+      
+      loadingBar.style.display = "block";
 
-          var canvas = document.querySelector("#unity-canvas");
-          var loadingBar = document.querySelector("#unity-loading-bar");
-          var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var gameInstance = null;
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+            {
+                document.getElementById("progressBar").style.width = 420 * progress + "px";
+                document.getElementById("loadingInfo").innerHTML = "" + Math.round(progress * 100) + "%";
+                document.getElementById("loadingInfo").style.color = "white";
+                document.getElementById("bgBar").style.display = "block";
+                document.getElementById("progressBar").style.display = "inherit";
+            }
+        }).then((unityInstance) => {
+          document.getElementById("loadingBox").style.display = "none";
+          // document.getElementById("icon").style.display = "none";
+          document.getElementById("loadingInfo").style.display = "none";
+          document.getElementById("box").style.display = "none";
+          gameInstance = unityInstance;
 
-          // By default Unity keeps WebGL canvas render target size matched with
-          // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-          // Set this to false if you want to decouple this synchronization from
-          // happening inside the engine, and you would instead like to size up
-          // the canvas DOM size and WebGL render target sizes yourself.
-          // config.matchWebGLToCanvasSize = false;
-
-
-          loadingBar.style.display = "block";
-
-          var gameInstance = null;
-          var script = document.createElement("script");
-          script.src = loaderUrl;
-          script.onload = () => {
-              createUnityInstance(canvas, config, (progress) => {
-                  {
-                      document.getElementById("progressBar").style.width = 420 * progress + "px";
-                      document.getElementById("loadingInfo").innerHTML = "" + Math.round(progress * 100) + "%";
-                      document.getElementById("loadingInfo").style.color = "white";
-                      document.getElementById("bgBar").style.display = "block";
-                      document.getElementById("progressBar").style.display = "inherit";
-                  }
-              }).then((unityInstance) => {
-                  document.getElementById("loadingBox").style.display = "none";
-                  // document.getElementById("icon").style.display = "none";
-                  document.getElementById("loadingInfo").style.display = "none";
-                  document.getElementById("box").style.display = "none";
-                  gameInstance = unityInstance;
-
-                  if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-                      gameInstance.SendMessage('DeviceDetector', 'SetDeviceType', 'true');
-                  }
-                  else {
-                      gameInstance.SendMessage('DeviceDetector', 'SetDeviceType', 'false');
-                  }
-              }).catch((message) => {
-                  alert(message);
-              });
-          };
-          document.body.appendChild(script);
-      </script>
+          if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent))
+          {
+            gameInstance.SendMessage('DeviceDetector', 'SetDeviceType', 'true');
+          }
+          else
+          {
+            gameInstance.SendMessage('DeviceDetector', 'SetDeviceType', 'false');
+          }
+        }).catch((message) => {
+          alert(message);
+        });
+      };
+      document.body.appendChild(script);
+    </script>
 
       <script title="main">
 
